--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -1,17 +1,17 @@
 /* Global styling */
 
-@import url(global.css);
+@import url("global.css");
 
 /* VARIABLES */
 
 :root{
-    --primary-color: #4458dc;
-    --primary-color2: #854fee;
+    --primary-color: #06ac38;
+    --primary-color2: #007e1f;
     --title-color: #141313;
     --text-color: #777777;
     --border-color: #201f1f17;
-    --gradient-color: linear-gradient(90deg, #4458dc 0%, #854fee 100%);
-    --shadow-color: 0px 10px 30px rgba(118, 85, 225, 0.3);
+    --gradient-color: linear-gradient(90deg, #83f39c 0%, #0ca507 100%);
+    --shadow-color: 0px 10px 30px rgba(80, 209, 241, 0.3);
     --box-color: 0px 10px 30px rgba(57, 56, 61, 0.205);
 
     /* font variable */
@@ -63,7 +63,7 @@ html, body{
 /* START Banner area */
 
 .site-banner{
-    background: url(./images/banner.PNG) no-repeat 0% 50%;
+    background: url(./images/banner.PNG) no-repeat 10% 20%;
 }
 
 .site-title{
@@ -94,5 +94,106 @@ html, body{
 }
 
 
-
 /* END Banner area */
+
+/* Start about me area */
+
+.about-area{
+    padding: 8rem 5rem;
+}
+
+.about-title h2 > span{
+    display: block;
+    font: normal bold 49px/ 60px var(--roboto);
+    letter-spacing: 20px;
+}
+
+.about-title .paragraph > p{
+    padding: 1rem 0;
+}
+
+.about-image{
+    position: absolute;
+    left: 20%;
+}
+
+/* End about me area */
+
+/* Start Brand Area */
+
+.site-main .brand-area{
+    padding: 1rem 20rem;
+    margin-bottom: 4rem;
+}
+
+.site-main .brand-area .first-row .col-lg-4{
+    display: flex;
+    justify-content: center;
+}
+
+.site-main .brand-area .first-row .col-lg-4 > .single-brand{
+    border: 1px solid var(--border-color);
+    text-align: center;
+    padding: 1.8rem 0rem;
+    margin: .9rem 0;
+    width: 180px;
+    height: 100px;
+    cursor: pointer;
+    transition: transform .4s ease;
+}
+
+.site-main .brand-area .first-row .col-lg-4 > .single-brand > img{
+    width: 50%;
+}
+
+.site-main .brand-area .first-row .col-lg-4 > .single-brand:hover{
+    box-shadow: var(--box-shadow);
+    transform: scale(1.1);
+}
+
+.site-main .brand-area .first-row .col-lg-4 > .single-brand:hover > img{
+    filter: brightness(0.15);
+}
+
+.site-main .brand-area .experience-area{
+    padding-left: 1rem;
+}
+
+.site-main .brand-area .experience-area span{
+    display: block;
+}
+
+.site-main .brand-area .experience-area .years-area{
+    padding: 2rem 0;
+    width: 40rem;
+    height: 18rem;
+    padding-left: 8rem;
+    position: relative;
+}
+
+.site-main .brand-area .experience-area .bg-panel{
+    position: absolute;
+    right: 440px; top: 159%;
+    background: #4ed1550a;
+    width: 400px;
+    height: 400px;
+    margin-left: 340px;
+    z-index: -1;
+}
+
+.site-main .brand-area .experience-area .years-area .years{
+    font: normal bold 84px/40px var(--roboto);
+    color: var(--primary-color2);
+    z-index: 2;
+}
+
+.site-main .brand-area .experience-area .years-area h2 > span{
+    font: normal 600 22px/30px var(--roboto);
+}
+
+.site-main .brand-area .experience-area .call-area{
+    padding-left: 10rem;
+}
+
+
+/* End Brand Area */
