--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -19,60 +19,49 @@
 
 }
 
-/* start navigation */
-
-
-html, body{
-    margin: 0%;
-    box-sizing: border-box;
-    width: 100%;
-    height: 100%;
-}
+/* start navigation */ 
 
 .navbar-brand{
-    padding: 0 2rem 0 5;
+    color: var(--primary-color);
 }
 
-.navbar{
-    padding: 1rem 20rem;
+.header_area .main-menu .navbar{
+    padding: 1rem 20rem ;
 }
 
-.nav-link{
+.header_area .main-menu .nav-item .nav-link{
     font: normal 500 15px/2px var(--roboto);
     text-transform: uppercase;
     padding: 1.7rem;
     color: var(--title-color);
 }
 
-.nav-link.active{
+.header_area .main-menu .navbar-nav .active a{
     background: var(--gradient-color);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip: text;
 }
 
-.nav-link:hover{
+.header_area .main-menu .navbar-nav a:hover{
     background: var(--gradient-color);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip: text;
 }
 
-/* end navigation */
 
-/* START Banner area */
+/* end navigation */ 
 
-.site-banner{
-    background: url(./images/banner.PNG) no-repeat 10% 20%;
-}
+/* Banner Area */ 
 
-.site-title{
-    padding-top: 10%;
+.site-main .site-banner .site-title h3{
+    padding-top: 35%;
     font-weight: 500;
 }
 
-.site-title h3::after{
-    content:"";
+.site-main .site-banner .site-title h3::after{
+    content: " ";
     height: 2px;
     width: 18vw;
     background: black;
@@ -81,43 +70,45 @@ html, body{
     transform: translateY(-10px);
 }
 
-.site-title h1{
+.site-main .site-banner .site-title h1{
     font-size: 5rem;
 }
 
-.site-title h4{
+.site-main .site-banner .site-title h4{
     font-size: 1.5rem;
 }
 
-.banner-image > img{
+.site-main .site-banner .banner-image > img{
     padding: 7rem 0;
 }
 
 
-/* END Banner area */
 
-/* Start about me area */
+/* End Banner Area */ 
 
-.about-area{
+/* Start About Area */ 
+
+.site-main .about-area{
     padding: 8rem 5rem;
 }
 
-.about-title h2 > span{
+.site-main .about-area .about-title h2 > span{
     display: block;
     font: normal bold 49px/ 60px var(--roboto);
-    letter-spacing: 20px;
+    letter-spacing: 21px;
 }
 
-.about-title .paragraph > p{
-    padding: 1rem 0;
+.site-main .about-area .about-title .paragraph > p{
+    padding: .4rem 0;
 }
 
-.about-image{
-    position: absolute;
-    left: 20%;
+.site-main .about-area .about-image > img{
+    padding: 5rem 15rem;
 }
 
-/* End about me area */
+
+/* End About Area */ 
+
 
 /* Start Brand Area */
 
@@ -195,5 +186,52 @@ html, body{
     padding-left: 10rem;
 }
 
-
 /* End Brand Area */
+
+/* Project Area */ 
+
+.site-main .project-area{
+    padding: 4rem 0;
+}
+
+.site-main .project-area .button-group button{
+    background: transparent;
+    border: none;
+    font: normal 500 16px/130px var(--roboto);
+    text-transform: uppercase;
+}
+
+.site-main .project-area .button-group button + button{
+    padding-left: 3rem;
+}
+
+.site-main .project-area .grid .our-project > .title h4{
+    font: normal 700 25px/12px var(--roboto);
+}
+
+.site-main .project-area .grid .our-project .img a:hover img{
+    filter: brightness(1.1) drop-shadow(1px 8px 30px #b1afaf);
+}
+
+
+/* End Project Area */ 
+
+/* Footer Area */ 
+
+
+footer.footer-area .social h5{
+    font: normal 500 23px/ 30px var(--roboto);
+}
+
+footer.footer-area .social a > i{
+    font-size:22px;
+    padding: 2rem;
+    color: var(--border-color);
+}
+
+footer.footer-area .social a:hover > i{
+    color: var(--primary-color);
+}
+
+
+/* End Footer */ 
