--- a/static/global.css
+++ b/static/global.css
@@ -1,20 +1,24 @@
 /* Global classes */
 
 .title-text{
-    font: normal bold 50px/ 72px var(--roboto)
+    font: normal bold 50px/ 72px var(--roboto);
 }
 
-/* Buttons */
+.text-uppercase{
+    text-transform: uppercase;
+}
+
+/* Buttons */ 
 
 .button{
     padding: .8rem 2.2rem;
     font: normal 500 16px/20px var(--roboto);
     position: relative;
-    border: 4px solid transparent;
+    border: 3px solid transparent;
     border-radius: 4px;
 }
 
-.primary-button{
+.button.primary-button{
     background: var(--gradient-color);
     background-clip: padding-box;
     color: whitesmoke;
@@ -22,37 +26,41 @@
     box-shadow: var(--box-shadow);
 }
 
-.primary-button:hover{
+.button.primary-button:hover{
     background: whitesmoke;
     background-clip: padding-box;
     color: black;
 }
 
-.primary-button::after, .secondary-button::after{
+.button.primary-button::after, .button.secondary-button::after{
     position: absolute;
     top: -2px; left: -2px;
-    bottom: -2px; right: -2px;
+    bottom: -2px;  right: -2px;
     background: var(--gradient-color);
-    content:"";
+    content: ' ';
     z-index: -1;
     border-radius: 4px;
 }
 
-.secondary-button{
+.button.secondary-button{
     background: white;
     background-clip: padding-box;
     transition: background .6s ease;
 }
 
-.secondary-button:hover{
+.button.secondary-button:hover{
     background: var(--gradient-color);
     color: whitesmoke;
-    box-shadow: var(--box-shadow)
+    box-shadow: var(--box-shadow);
 }
 
 p.para{
     color: var(--text-color);
-    font: normal 500 16px/25px var(--roboto)
+    font: normal 500 16px/ 25px var(--roboto);
+}
+
+.font-roboto{
+    font-family: var(--roboto);
 }
 
 button:focus,
@@ -63,6 +71,11 @@ button:hover
     outline: 0px !important;
     box-shadow: none !important;
 }
+
+.title-h1{
+    font: normal bold 39px/ 40px var(--roboto);
+}
+
 
 .navbar_fixed{
     position: fixed;
