--- a/static/styles.css
+++ b/static/styles.css
@@ -1,6 +1,8 @@
 /* Global styling */
 
 @import url("./global.css");
+@import url("./cipher.css");
+
 
 /* VARIABLES */
 
@@ -12,7 +14,7 @@
     --border-color: #201f1f17;
     --gradient-color: linear-gradient(90deg, #83f39c 0%, #0ca507 100%);
     --shadow-color: 0px 10px 30px rgba(80, 209, 241, 0.3);
-    --box-color: 0px 10px 30px rgba(57, 56, 61, 0.205);
+    --box-shadow: 0px 10px 30px rgba(57, 56, 61, 0.205);
 
     /* font variable */
     --roboto: "Arial", cursive;
@@ -55,12 +57,12 @@
 
 /* Banner Area */ 
 
-.site-main .site-banner .site-title h3{
+.site-banner .site-title h3{
     padding-top: 35%;
     font-weight: 500;
 }
 
-.site-main .site-banner .site-title h3::after{
+.site-banner .site-title h3::after{
     content: " ";
     height: 2px;
     width: 18vw;
@@ -70,146 +72,68 @@
     transform: translateY(-10px);
 }
 
-.site-main .site-banner .site-title h1{
+.site-banner .site-title h1{
     font-size: 5rem;
 }
 
-.site-main .site-banner .site-title h4{
+.site-banner .site-title h4{
     font-size: 1.5rem;
 }
 
-.site-main .site-banner .banner-image > img{
+.site-banner .banner-image > img{
     padding: 7rem 0;
 }
-
 
 
 /* End Banner Area */ 
 
 /* Start About Area */ 
 
-.site-main .about-area{
+.about-area{
     padding: 8rem 5rem;
 }
 
-.site-main .about-area .about-title h2 > span{
+.about-area .about-title h2 > span{
     display: block;
     font: normal bold 49px/ 60px var(--roboto);
     letter-spacing: 21px;
 }
 
-.site-main .about-area .about-title .paragraph > p{
+.about-area .about-title .paragraph > p{
     padding: .4rem 0;
 }
 
-.site-main .about-area .about-image > img{
-    padding: 5rem 15rem;
+.about-area .about-image > img{
+    margin-top: 3rem;
+    margin-left: 15rem;
 }
 
 
 /* End About Area */ 
 
 
-/* Start Brand Area */
-
-.site-main .brand-area{
-    padding: 1rem 20rem;
-    margin-bottom: 4rem;
-}
-
-.site-main .brand-area .first-row .col-lg-4{
-    display: flex;
-    justify-content: center;
-}
-
-.site-main .brand-area .first-row .col-lg-4 > .single-brand{
-    border: 1px solid var(--border-color);
-    text-align: center;
-    padding: 1.8rem 0rem;
-    margin: .9rem 0;
-    width: 180px;
-    height: 100px;
-    cursor: pointer;
-    transition: transform .4s ease;
-}
-
-.site-main .brand-area .first-row .col-lg-4 > .single-brand > img{
-    width: 50%;
-}
-
-.site-main .brand-area .first-row .col-lg-4 > .single-brand:hover{
-    box-shadow: var(--box-shadow);
-    transform: scale(1.1);
-}
-
-.site-main .brand-area .first-row .col-lg-4 > .single-brand:hover > img{
-    filter: brightness(0.15);
-}
-
-.site-main .brand-area .experience-area{
-    padding-left: 1rem;
-}
-
-.site-main .brand-area .experience-area span{
-    display: block;
-}
-
-.site-main .brand-area .experience-area .years-area{
-    padding: 2rem 0;
-    width: 40rem;
-    height: 18rem;
-    padding-left: 8rem;
-    position: relative;
-}
-
-.site-main .brand-area .experience-area .bg-panel{
-    position: absolute;
-    right: 440px; top: 159%;
-    background: #4ed1550a;
-    width: 400px;
-    height: 400px;
-    margin-left: 340px;
-    z-index: -1;
-}
-
-.site-main .brand-area .experience-area .years-area .years{
-    font: normal bold 84px/40px var(--roboto);
-    color: var(--primary-color2);
-    z-index: 2;
-}
-
-.site-main .brand-area .experience-area .years-area h2 > span{
-    font: normal 600 22px/30px var(--roboto);
-}
-
-.site-main .brand-area .experience-area .call-area{
-    padding-left: 10rem;
-}
-
-/* End Brand Area */
-
 /* Project Area */ 
 
-.site-main .project-area{
+.project-area{
     padding: 4rem 0;
 }
 
-.site-main .project-area .button-group button{
+.project-area .button-group button{
     background: transparent;
     border: none;
     font: normal 500 16px/130px var(--roboto);
     text-transform: uppercase;
 }
 
-.site-main .project-area .button-group button + button{
+.project-area .button-group button + button{
     padding-left: 3rem;
 }
 
-.site-main .project-area .grid .our-project > .title h4{
+.project-area .grid .our-project > .title h4{
     font: normal 700 25px/12px var(--roboto);
 }
 
-.site-main .project-area .grid .our-project .img a:hover img{
+.project-area .grid .our-project .img a:hover img{
     filter: brightness(1.1) drop-shadow(1px 8px 30px #b1afaf);
 }
 
