--- a/templates/index.html
+++ b/templates/index.html
@@ -35,8 +35,8 @@
     <div class="container-fluid">
         <div class="row">
         <div class="col-lg-6 col-md-12">
-            <div class="about-image">
-            <img src="/static/images/ent.jpg" alt="About me" class="img-fluid">
+            <div class="col-lg-6 col-md-12 about-image">
+            <img src="/static/images/ent.jpg" alt="about-area" class="img-fluid">
             </div>
         </div>
         <div class="col-lg-6 col-md-12 about-title">
@@ -64,48 +64,6 @@
 
 
 <!-- ===================================================================END ABOUT AREA================================================================ -->
-
-
-<!-- ===================================================================START BRAND AREA================================================================ -->
-
-<section class="brand-area">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-xl-6 col-lg-12 col-md-12">
-                <div class="first-row row">
-                    <div class="col-lg-4 col-md-6 col-sm-6">
-                        <div class="single-brand">
-                            <img src="/static/images/dragon.png" alt="Brand-1 ">
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xl-6 col-lg-12 col-md-12">
-                <div class="experience-area">
-                    <div class="d-flex flex-row years-area">
-                        <h2 class="p-3 years">5</h2>
-                        <h2>
-                            <span>Years</span>
-                            <span>Experience</span>
-                            <span>Engineer</span>
-                        </h2>
-                    </div>
-                    <div class="d-flex flex-row flex-wrap call-area">
-                        <span><i class="fa-solid fa-envelope fa-2x"></i></span>
-                        <div class="e-mail-now">
-                            <a href="#" class="text-uppercase h4 font-roboto">E-mail Now</a>
-                            <span class="font-roboto py-2">palusba@gmail.com</span>
-                        </div>
-                        <div class="bg-panel"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-
-
-<!-- ===================================================================END BRAND AREA================================================================ -->
 
 <!--  ===================================================================START PROJECT AREA ===============================================================  -->
 
