--- a/templates/layout.html
+++ b/templates/layout.html
@@ -38,7 +38,7 @@
                               <a class="nav-link" href="#">services</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="/cipher">projects</a>
+                              <a class="nav-link" href="#">projects</a>
                             </li>
                             <li class="nav-item">
                               <a class="nav-link" href="#">blog</a>
