--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 
 <!-- ===================================================================START BANNER================================================================ -->
     <section class="site-banner">
-    <div class="container">
+    <div class="container" id="home">
         <div class="row">
         <div class="col-lg-6 col-md-12 site-title">
             <h3 class="title-text text-greeting">Hey</h3>
@@ -19,7 +19,7 @@
             </div>
         </div>
         <div class="col-lg-6 col-md-12 banner-image">
-            <img alt="banner-image" class="img-fluid" src="/static/images/programmer.png">
+            <img alt="banner-image" class="img-fluid" src="/static/images/isla_mujeres.jpg">
         </div>
         </div>
     </div>
@@ -32,7 +32,7 @@
 <!-- ===================================================================START ABOUT AREA================================================================ -->
 
     <section class="about-area">
-    <div class="container-fluid">
+    <div class="container-fluid" id="about">
         <div class="row">
         <div class="col-lg-6 col-md-12">
             <div class="col-lg-6 col-md-12 about-image">
@@ -47,10 +47,18 @@
             </h2>
             <div class="paragraph py-4 w-75">
                 <p class="para">
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                What is the ent doing there on the left? I just think that this one image can express two of my passions simultaneously. I love fantasy and nature! Besides I 
+                play guitar/ukulele and sing. I also hike and ride the MTB that I call "Indianin". When I take a longer break from work I travel. I think that when you travel
+                you don't only get to know other cultures, but also you realize much more about your home. It widens the perspective and is an incredibly rich experience. Check out 
+                my youtube channel in the follow me section to have a look at my blogs if you are interested. 
                 </p>
                 <p class="para">
-                It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.
+                From the professional perspective, I am a bit of a seeker. My undergraduate is from Chemical Engineering at Silesian University. Then I thought I 
+                would like to know more about mechanics, physics, and my already beloved thermodynamics so I graduated from the Advanced Mechanical Engineering program at 
+                Cranfield University - UK. I fell in love with computational physics, like CFD and FEA. I worked as Computer-Aided Engineer in that field for 4 years
+                but decided to do a final change in course of my career. I wanted something even more technical and deep in the computational field. Right now I am already 
+                programming in Python for about 2 years and I am thrilled to pieces. I want to pursue that path and I feel like this is finally it. A lot of technical challenges
+                and a need to keep learning is something that drives me to improve in the field. That is why I am currently pursuing a Master in Artificial intelligence at the International University of Applied Sciences. 
                 </p>
             </div>
             <button type="button" class="btn button primary-button text-uppercase">Download CV</button>
@@ -68,7 +76,7 @@
 <!--  ===================================================================START PROJECT AREA ===============================================================  -->
 
 <section class="project-area">
-    <div class="container">
+    <div class="container" id="projects">
         <div class="project-title pb-5">
             <h1 class="text-uppercase title-h1">Projects</h1>
         </div>
