--- a/templates/layout.html
+++ b/templates/layout.html
@@ -29,22 +29,16 @@
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                              <a class="nav-link active" aria-current="page" href="#">Home</a>
+                              <a class="nav-link active" aria-current="page" href="/">Home</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="#">about</a>
+                              <a class="nav-link" href="/#about">about</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="#">services</a>
+                              <a class="nav-link" href="/#projects">projects</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="#">projects</a>
-                            </li>
-                            <li class="nav-item">
-                              <a class="nav-link" href="#">blog</a>
-                            </li>
-                            <li class="nav-item">
-                              <a class="nav-link" href="#">contact</a>
+                              <a class="nav-link" href="/#contact">contact</a>
                             </li>
                           </ul>
                         </div>
@@ -62,7 +56,7 @@
         </main>
 
         <footer class="footer-area">
-            <div class="container">
+            <div class="container" id="contact">
                 <div class="">
                     <div class="site-logo text-center py-4">
                         <a class="navbar-brand" href="#"><i class="fa-solid fa-seedling"></i></a>
