--- a/static/cipher.css
+++ b/static/cipher.css
@@ -8,7 +8,9 @@
 
 
 .cipher-section .encrypted-message {
-    margin-top:30px;
-    top: 50%;
-    left: 50%;
+    margin-left:40%;
+}
+
+.cipher-section .para {
+    margin-left:20%;
 }
