--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<!-- Created with help of the following tutorial https://www.youtube.com/watch?v=dgKSqz3it50&t=1393s -->
+<!-- Front end created with help of the following tutorial https://www.youtube.com/watch?v=dgKSqz3it50&t=1393s -->
 
 <html lang="en">
     <head>
@@ -12,6 +12,7 @@
         <link href="/static/responsive.css" rel="stylesheet">
         
         <title>BARD</title>
+        <link rel="icon" type="image/x-icon" href="/static/images/seedling-solid.svg" class="fa-solid fa-seedling">
     </head>
     <body>
         <!-- ===================================================================START HEADER================================================================ -->
@@ -20,7 +21,7 @@
             <div class="main-menu">
                 <nav class="navbar navbar-expand-lg">
                     <div class="container-fluid">
-                      <a class="navbar-brand" href="#"><i class="fa-solid fa-seedling"></i></a>
+                      <a class="navbar-brand" href="/"><i class="fa-solid fa-seedling"></i></a>
                       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                       </button>
@@ -63,9 +64,10 @@
                     </div>
                     <div class="social text-center">
                         <h5 class="text-uppercase">Follow me</h5>
-                        <a href="#"><i class="fab fa-linkedin"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-youtube"></i></a>
+                        <a href="https://github.com/Bard2803"><i class="fab fa-github"></i></a>
+                        <a href="https://www.instagram.com/drabard/"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.youtube.com/channel/UC98NrqRw7P2uX891LMhcgWw"><i class="fab fa-youtube"></i></a>
+                        <a href="https://www.linkedin.com/in/bartlomiej-palus-40b72b115/"><i class="fab fa-linkedin"></i></a>                        
                     </div>
                     <div class="copyrights text-center">
                         <p class="para">
